force-app/main/default/objects/nFORCE__View__c/nFORCE__View__c.object-meta.xml
<CustomObject>
    <label>Screen View</label>
    <nameField>
        <displayFormat>VIEW-{000000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screen Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>