force-app/main/default/objects/nFORCE__View__c/fields/nFORCE__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__lookupKey__c</fullName>
    <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>