force-app/main/default/objects/nFORCE__View__c/fields/nFORCE__Preview__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Preview__c</fullName>
    <description>This field is currently not used, but is reserved for future use.</description>
    <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
    <label>Preview</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>